tests/miniJava/neg/005158_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] System.out.println java ) { return 0 ; } }
